# SkillJect

./: .env.example  .gitignore  Dockerfile.claude  README.md  SETUP.md  build.sh  pyproject.toml  run.py
config/: main_claude.yaml  main_glm.yaml  main_gpt.yaml  main_minimax.yaml  skillject.yaml  template_injection.yaml
data/: .env  .env.example  main.py
data/skills_sample/adaptyv/: SKILL.md  metadata.json
data/skills_sample/aesthetic/: SKILL.md  metadata.json
data/skills_sample/agent-memory/: metadata.json
data/skills_sample/agentdb-vector-search/: metadata.json
data/skills_sample/algorithmic-art/: SKILL.md  metadata.json
data/skills_sample/alphafold-database/: SKILL.md  metadata.json
data/skills_sample/analyzing-projects/: SKILL.md  metadata.json
data/skills_sample/arboreto/: SKILL.md  metadata.json
data/skills_sample/architecture-diagram-creator/: metadata.json
data/skills_sample/astropy/: SKILL.md  metadata.json
data/skills_sample/attack-tree-construction/: metadata.json
data/skills_sample/automating-api-testing/: metadata.json
data/skills_sample/biomni/: SKILL.md  metadata.json
data/skills_sample/biopython/: SKILL.md  metadata.json
data/skills_sample/biorxiv-database/: SKILL.md  metadata.json
data/skills_sample/bioservices/: SKILL.md  metadata.json
data/skills_sample/bloblang-authoring/: metadata.json
data/skills_sample/brenda-database/: SKILL.md  metadata.json
data/skills_sample/canvas-design/: metadata.json
docs/: develop-new-method.md
src/: __init__.py
src/domain/logging/: __init__.py
src/shared/: __init__.py  exceptions.py  types.py
(+299 files in other folders)
