[project]
name = "SkillJect"
version = "0.1.0"
description = "Security Evaluation Framework - Supports Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-html>=4.0.0",
    "pytest-xdist>=3.0.0",
    "aiofiles>=24.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",  # Support .env.example file loading
    "openai>=2.21.0",
    "opensandbox-server>=0.1.2",
    "opensandbox>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "./src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "prompt_injection: Prompt injection tests",
    "code_injection: Code injection tests",
    "metadata_injection: Metadata injection tests",
    "combined_attack: Combined attack tests",
    "bypass_mode: Bypass mode tests (Claude permissions set to bypass)",
    "slow: Mark slow-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
